# Projet_git_2425_ESE_BAHL

./: .cproject  .mxproject  .project  README.md  testing_lidar_oled_h7a3zi.ioc
Docs/FABRICATION_ESE_24_25/: ESE_AL8-B_Cu.gbr  ESE_AL8-B_Mask.gbr  ESE_AL8-B_Paste.gbr  ESE_AL8-B_Silkscreen.gbr  ESE_AL8-Edge_Cuts.gbr  ESE_AL8-F_Cu.gbr  ESE_AL8-F_Mask.gbr  ESE_AL8-F_Paste.gbr  ESE_AL8-F_Silkscreen.gbr  ESE_AL8-In1_Cu.gbr  ESE_AL8-In2_Cu.gbr  ESE_AL8-NPTH.drl  ESE_AL8-PTH.drl  ESE_AL8-job.gbrjob
Docs/Schema_KICAD/ESE_AL8/ESE_AL8/: ESE_AL8.kicad_pcb  ESE_AL8.kicad_prl  ESE_AL8.kicad_sch  ESE_AL8.kicad_sch-bak  fp-info-cache  schema_architectural.kicad_sch
Docs/Schema_KICAD/Librairie/: ESE_2425.bak  ESE_2425.kicad_sym
FABRICATION_ESE_24_25/: ESE_AL8-B_Paste.gbr  ESE_AL8-B_Silkscreen.gbr  ESE_AL8-Edge_Cuts.gbr  ESE_AL8-F_Cu.gbr  ESE_AL8-F_Paste.gbr  ESE_AL8-In1_Cu.gbr
Moteur/: EXEMPLE_CODE_CONTROL_ENCODER.c
Robot_ESE_BAHL/: Base (2).stl  SupportMotor2.stl  Tower2.stl
SOFTWARE/: .cproject  .mxproject  .project  projet3A_le_bon Debug.launch  projet3A_le_bon.ioc  projet3A_le_bon.txt  robot_chat_4 Debug.launch  robot_chat_4.ioc
SOFTWARE/Core/Inc/: Driver.h  Encoder.h  Moustache.h  PID.h  main.h  stm32g4xx_it.h
SOFTWARE/Core/Src/: Driver.c  Encoder.c  Moustache.c  PID.c  adc.c  gpio.c  i2c.c  main.c  stm32g4xx_it.c  tim.c  usart.c  ydlidar.c
SOFTWARE/Debug/: makefile  objects.list  projet3A_le_bon.elf  projet3A_le_bon.list  projet3A_le_bon.map  robot_chat_4.elf  robot_chat_4.list  robot_chat_4.map
SOFTWARE/Debug/Core/Src/: Driver.cyclo  Driver.d  Driver.su  Encoder.cyclo  Encoder.d  Encoder.su  Moustache.cyclo  Moustache.d  Moustache.su  PID.cyclo  PID.d  PID.su  adc.cyclo  adc.su  app_freertos.d  main.cyclo  main.d  main.su  stm32g4xx_it.cyclo  stm32g4xx_it.su  subdir.mk  tim.cyclo  tim.su  ydlidar.d
SOFTWARE/Debug/Drivers/STM32G4xx_HAL_Driver/Src/: subdir.mk
SOFWARE/: .cproject  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  SOFWARE Debug (1).launch  SOFWARE Debug.launch  SOFWARE.ioc  build.ninja  cmake_install.cmake  compile_commands.json
SOFWARE/Core/Inc/: ADXL343.h  Encodeur.h  GP2Y0E02A.h  LIDAR.h  Moteur.h  MoteurPWM.h  Moustache.h  Robot.h  YLIDARX2.h  lidar_X2_driver.h  main.h  stm32g4xx_it.h  tab.h  tim.h
SOFWARE/Core/Src/: ADXL343.c  Encodeur.c  GP2Y0E02A.c  LIDAR.c  Moteur.c  MoteurPWM.c  Moustache.c  Robot.c  YLIDARX2.c  adc.c  gpio.c  i2c.c  lidar_X2_driver.c  main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  system_stm32g4xx.c  tim.c  usart.c
SOFWARE/Debug/: SOFWARE.elf  SOFWARE.list  SOFWARE.map  makefile  objects.list
SOFWARE/Debug/Core/Src/: ADXL343.cyclo  ADXL343.d  ADXL343.su  Encodeur.cyclo  Encodeur.d  Encodeur.su  GP2Y0E02A.d  LIDAR.cyclo  LIDAR.d  LIDAR.su  Moteur.cyclo  Moteur.d  Moteur.su  MoteurPWM.cyclo  MoteurPWM.d  MoteurPWM.su  Moustache.cyclo  Moustache.d  Moustache.su  Robot.cyclo  Robot.d  Robot.su  YLIDARX2.cyclo  YLIDARX2.d  YLIDARX2.su  app_freertos.d  lidar_X2_driver.cyclo  lidar_X2_driver.d  lidar_X2_driver.su  main.cyclo  main.d  main.su  stm32g4xx_it.cyclo  stm32g4xx_it.su  subdir.mk  tim.cyclo  tim.su  usart.cyclo  usart.su
SOFWARE/Debug/Drivers/STM32G4xx_HAL_Driver/Src/: subdir.mk
SOFWARE/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
Schema_KICAD/: ESE_AL8.csv
Schema_KICAD - Copie/ESE_AL8/ESE_AL8/: #auto_saved_files#  Actionneur.kicad_sch  ESE_AL8.kicad_pcb  ESE_AL8.kicad_pro  ESE_AL8.kicad_sch  STM32.kicad_sch  freerouting.dsn  sensors.kicad_sch  temp-freerouting.dsn
Schema_KICAD - Copie/Librairie/STM32.pretty/: SWITCH TOGGLE SPDT 1A 30V.kicad_mod
Schema_KICAD/ESE_AL8/: ESE_AL8.kicad_prl  ESE_AL8.kicad_pro  ESE_AL8.kicad_sch  fp-info-cache
Schema_KICAD/ESE_AL8/ESE_AL8/: #auto_saved_files#  Actionneur.kicad_sch  ESE_AL8.kicad_pcb  ESE_AL8.kicad_prl  ESE_AL8.kicad_pro  ESE_AL8.kicad_sch  ESE_AL8.kicad_sch-bak  STM32.kicad_sch  STM32.kicad_sch-bak  _autosave-ESE_AL8.kicad_sch  _autosave-STM32.kicad_sch  _autosave-schema_architectural.kicad_sch  _autosave-sensors.kicad_sch  alimentation.kicad_sch  alimentation.kicad_sch-bak  fp-info-cache  fp-lib-table  freerouting.dsn  schema_architectural.kicad_sch  sensors.kicad_sch  sensors.kicad_sch-bak  sym-lib-table  temp-freerouting.dsn  ~ESE_AL8.kicad_sch.lck
Schema_KICAD/ESE_AL8/GERBER/: ESE_AL8-B_Cu.gbr  ESE_AL8-B_Mask.gbr  ESE_AL8-B_Paste.gbr  ESE_AL8-B_Silkscreen.gbr  ESE_AL8-Edge_Cuts.gbr  ESE_AL8-F_Cu.gbr  ESE_AL8-F_Mask.gbr  ESE_AL8-F_Paste.gbr  ESE_AL8-F_Silkscreen.gbr  ESE_AL8-In1_Cu.gbr  ESE_AL8-In2_Cu.gbr  ESE_AL8-NPTH.drl  ESE_AL8-PTH.drl  ESE_AL8-job.gbrjob
Schema_KICAD/Librairie/STM32.pretty/: Diodes_SO-8EP.kicad_mod  IND_052047_WRE.kicad_mod  Inductor_Buck.kicad_mod  QFN-48-1EP_7x7mm_P0.5mm_EP5.6x5.6mm_AJ.kicad_mod  SW_Push_1P1T_NO_6x6mm_H9.5mm.kicad_mod  logo.kicad_mod
